Div's alignment corrected

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h1 {
     min-width: 1000px;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -59,7 +59,8 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    text-align: center;
 }
 
 .mainPage_panel p{
